ADS-3051 - port GetGreengageRecord processor from 1.28x version - port PutGreengageRecord processor improvements from 1.28.x version